--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "V2 project tech - bucket dating app",
   "main": "server.js",
   "dependencies": {
+    "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mongodb": "^3.2.6",
     "mongoose": "^5.5.12"
