--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "v2bucket",
-  "version": "1.0.0",
-  "description": "V2 project tech - bucket dating app",
-  "main": "server.js",
-  "dependencies": {
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "mongodb": "^3.2.6",
-    "mongoose": "^5.5.12"
-  },
-  "devDependencies": {
-    "eslint": "^5.16.0",
-    "nodemon": "^1.19.1",
-    "stylelint-config-standard": "^18.3.0"
-  },
+  "name": "pt-course-2019v2",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "http-server": "^0.11.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
+  },
+  "description": "Version  2 of my Tech project",
+  "main": "app.js",
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/harmvv/pt-course-2019v2.git"
   },
-  "keywords": [
-    "Datingapp",
-    "NodeJS"
-  ],
   "author": "Harm van Verseveld",
   "license": "ISC",
   "bugs": {
