--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.1",
+    "express-validator": "^5.3.1",
     "http-errors": "~1.6.3",
     "http-server": "^0.11.1",
     "morgan": "~1.9.1"
