--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-validator": "^5.3.1",
     "http-errors": "~1.6.3",
     "http-server": "^0.11.1",
+    "mongodb": "^3.2.6",
     "morgan": "~1.9.1"
   },
   "description": "Version  2 of my Tech project",
