--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "http-server": "^0.11.1",
     "mongodb": "^3.2.6",
+    "mongoose": "^5.5.12",
     "morgan": "~1.9.1"
   },
   "description": "Version  2 of my Tech project",
