--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "http-server": "^0.11.1",
     "mongodb": "^3.2.6",
     "mongoose": "^5.5.12",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0"
   },
   "description": "Version  2 of my Tech project",
   "main": "app.js",
