--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^3.2.6",
     "mongoose": "^5.5.12",
     "morgan": "~1.9.1",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0"
